--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -67,7 +67,7 @@
 
  chi_mars.10.t: "The First Harvest on Mars"
  chi_mars.10.d: "The problem of water sources has been solved, and the energy source is temporarily provided by solar power. Therefore, the production of food on Mars has become the most important matter at present. \nTraditional cereal crops have been excluded due to their growth cycles and harvesting processes, and potatoes have become the first human crops to be grown on Mars. Although Mars is not as bright as Earth due to the distance from the sun, the potatoes in the greenhouse seem to grow more lushly. Humanity's first harvest on Mars is in sight."
- chi_mars.10.o1: "All nature, organic, Martian-grown potatoes."
+ chi_mars.10.o1: "All natural, organic, Martian-growing potatoes."
 
  chi_mars.11.t: "Sandstorm"
  chi_mars.11.d: "Sandstorm are a common occurrence on Mars. Although the air pressure on Mars is much lower than that of the Earth, the Martian storm is not as devastating as the previous legends, just like in that movie. \nHowever, the raised dust still poses a lot of hidden dangers to human bases, especially since solar energy is an indispensable energy source for current bases."
