--- a/localisation/english/MD_focus_EGY_l_english.yml
+++ b/localisation/english/MD_focus_EGY_l_english.yml
@@ -550,6 +550,8 @@
  EGY_military_dislike: "§HMilitary§! Opinion of this Party is §R-50§!"
  EGY_military_like: "§HMilitary§! Opinion of this Party is §G50§!"
  EGY_military_love: "§HMilitary§! Opinion of this Party is §G100§!"
+ EGY.Vilayat_e_Faqih_desc: "§HMilitary§! Opinion of this Party is §R-100§!"
+ EGY.Mod_Vilayat_e_Faqih_desc: "§HMilitary§! Opinion of this Party is §R-100§!"
  nat_autocracy_soc_con_TT: "The §H[Nat_Autocracy_L]§! opinion will lower if social conservatism is higher than §R25§!\nThe effects will appear gradually!"
  special_force_TT: "§YEffects will appear gradually!§!"
  unit_777: "§Y1§! Division of §YUnit 777§! will be created!"
