--- a/localisation/english/MD_focus_ITA_l_english.yml
+++ b/localisation/english/MD_focus_ITA_l_english.yml
@@ -1301,7 +1301,7 @@
  ita_military.14.d: ""
  ita_military.14.o1: "Mass Production Specialization"
  ita_military.14.o2: "High Performance Specialization"
- ita_military.15.t: "Spacielized Close Air Support"
+ ita_military.15.t: "Specialized Close Air Support"
  ita_military.15.d: ""
  ita_military.15.o1: "Mass Production Specialization"
  ita_military.15.o2: "High Performance Specialization"
