Update political parties

--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -6207,12 +6207,15 @@
  IRE.Monarchist_desc: ""
  IRE.oligarchism: "£ire_monarchist Guiness"
  IRE.oligarchism_desc: ""
- IRE.Neutral_conservatism: "Progressive Democrats"
- IRE.Neutral_conservatism_desc: "Progressive Democrats"
- IRE.liberalism: "£IRE_western_liberal Fine Gael"
+ IRE.Neutral_conservatism: "£IRE_neutral_conservatism Progressive Democrats"
+ IRE.Neutral_conservatism_desc: ""
+ IRE.liberalism: "£IRE_liberalism Fine Gael"
  IRE.liberalism_desc: ""
- IRE.neutral_Social: "£IRE_emerging_communism Sinn Fein"
+ IRE.neutral_Social: "£IRE_neutral_social Sinn Fein"
  IRE.neutral_Social_desc: ""
+ IRE.anarchist_communism_1: "People before Profit"
+ IRE.anarchist_communism_1_desc: ""
+
 
  # Israel
  ISR.conservatism: "£ISR_conservatism Likud"
