--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -630,13 +630,53 @@
  UKR_btr70_m: "Assemble a Prototype §YBTR 70M§!"
  UKR_BTR_4: "Assemble a Prototype §YBTR-4 Bucephalus§!"
  UKR_bm21_k: "Assemble a Prototype §YBM-21K§!"
+
  UKR_helicopter: "Carry Out Developments In The Field of §YHelicopters§!"
  UKR_tro_brigades_ukraine_decision_category: "Territorial Defense Forces of Ukraine"
- UKR_tro_brigades_ukraine_decision_category_desc: "The Territorial Defense Forces of the Armed Forces of Ukraine are a separate branch of the Armed Forces of Ukraine, which is entrusted with the organization, preparation and execution of territorial defense tasks.\nThey will be deployed in division style instead of brigades to improve their combat capabilities.Current number of deployable corps: §Y[?ukr_ter_obr_count]§!"
- UKR_expand_ter_obr: "Expand TRO Brigades"
- UKR_expand_ter_obr_desc: "This will increase our number of deployable TRO corps by 1"
- UKR_deploy_ter_obr: "Deploy TRO forces"
- UKR_disband_ter_obr: "Disband TRO forces"
+ UKR_tro_brigades_ukraine_decision_category_desc: "The Territorial Defense Forces of the Armed Forces of Ukraine are a separate branch of the Armed Forces of Ukraine, which is entrusted with the organization, preparation and execution of territorial defense tasks."
+
+ UKR_territorial_defense_zapad: "Open the list of Territorial Defense Forces "West""
+ UKR_territorial_defense_zapad_close: "Close the list of Territorial Defense Forces "West""
+ UKR_territorial_defense_1: "Create §Y100th Separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_2: "Create §Y104th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_3: "Create §Y103rd separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_4: "Create §Y125th Separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_5: "Create §Y105th Separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_6: "Create §Y106th separate Territorial Defense brigade§!"
+ UKR_territorial_defense_7: "Create §Y101st separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_8: "Create §Y102nd separate Territorial Defense brigade§!"
+ UKR_territorial_defense_9: "Create §Y107th separate Territorial Defense Brigade§!"
+
+ UKR_territorial_defense_south: "Open the list of Territorial Defense Forces "South""
+ UKR_territorial_defense_south_close: "Close the list of Territorial Defense Forces "South""
+ UKR_territorial_defense_10: "Create §Y120th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_11: "Create §Y121st separate Territorial defense brigade§!"
+ UKR_territorial_defense_12: "Create §Y122nd separate Territorial Defense brigade§!"
+ UKR_territorial_defense_13: "Create §Y123rd separate Territorial defense brigade§!"
+ UKR_territorial_defense_14: "Create §Y124th separate Territorial Defense brigade§!"
+ UKR_territorial_defense_15: "Create §Y126th separate Territorial Defense brigade§!"
+
+ UKR_territorial_defense_north: "Open the list of Territorial Defense Forces "North""
+ UKR_territorial_defense_north_close: "Close the list of Territorial Defense Forces "North""
+ UKR_territorial_defense_16: "Create §Y241st separate Territorial Defense brigade§!"
+ UKR_territorial_defense_17: "Create §Y112th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_18: "Create §Y114th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_19: "Create §Y115th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_20: "Create §Y118th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_21: "Create §Y119th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_22: "Create §Y117th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_23: "Create §Y116th separate Territorial Defense Brigade§!"
+
+ UKR_territorial_defense_east: "Open the list of Territorial Defense Forces "East""
+ UKR_territorial_defense_east_close: "Close the list of Territorial Defense Forces "East""
+ UKR_territorial_defense_24: "Create §Y108th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_25: "Create §Y128th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_26: "Create §Y129th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_27: "Create §Y127th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_28: "Create §Y113th separate Territorial Defense brigade§!"
+ UKR_territorial_defense_29: "Create §Y110th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_30: "Create §Y109th separate Territorial Defense Brigade§!"
+ UKR_territorial_defense_31: "Create §Y111th separate Territorial Defense Brigade§!"
 
 
  ##########YANUKOVICH##########
@@ -2208,8 +2248,8 @@
  UKR_poroh_prepare_donbass: "Preparing For a Rematch in Donbass"
  UKR_poroh_prepare_donbass_desc: "We are ready to take revenge from the separatists and solve the problem with the People's republics forever"
  UKR_poroh_osce_ukr: "OSCE Observers"
- UKR_poroh_osce_ukr_desc: "OSCE Observers"
- UKR_idea_eu_member_associate: "OSCE observers have been sent to the conflict zone to stabilize the situation on the front line with the unrecognized republics"
+ UKR_poroh_osce_ukr_desc: "OSCE observers have been sent to the conflict zone to stabilize the situation on the front line with the unrecognized republics"
+ UKR_idea_eu_member_associate: "Associate Member of the EU"
  UKR_idea_eu_member_associate_desc: "Ukraine has begun its association with the EU. It will deepen ties with Europe and the Western bloc. However, it provides issues with the Russian-language speaking majority regions."
  ##########Events##########
  ukraine_poroh.1.t: "Ukraine Proposes a Non-Aggression Pact"
