--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -821,6 +821,7 @@
  iraqi_events.39.t: "[PER.GetFlag] Iran Sends Back Our Old Planes"
  iraqi_events.39.d: "The [PER.GetFlag] Iranian Government has began arrangements to fly our old planes into an Airbase in Baghdad later today."
  iraqi_events.39.a: "That's Very Nice of Them"
+ iraqi_events.39.b: "Why Did They Even Bother Asking?"
 
  iraqi_events.40.t: "[PER.GetFlag] Iran Refuses to Sends Back Our Old Planes"
  iraqi_events.40.d: "The [PER.GetFlag] Iranian Government has dismissed our diplomats, stating that the planes were reparations for the conflict between our nations between 1980-1988."
