--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,9 @@ v1.10.3
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
 
+ Localization:
+  - Major fixes and improvements to the Russian localization
+
 
 v1.10.2
 
