--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -2009,8 +2009,8 @@
  UKR_Resolve_the_Moldovan_issue_desc: "Moldova and Transnistria have been in our way for a long time, their independence is just a mistake, we will fix it"
  UKR_Dig_up_potatoes: "Dig up Potatoes"
  UKR_Dig_up_potatoes_desc: "Belarus can be used by our enemies from both the west and the east to strike at us. The best way to protect yourself is to strike first!"
- UKR_To_recall_the_Volhynia_Massacre: "To Recall the Volhynia Massacre"
- UKR_To_recall_the_Volhynia_Massacre_desc: "We will remind the Poles of their cruelty in Volhynia"
+ UKR_To_recall_the_Volhynia_Massacre: "Volyn Experience"
+ UKR_To_recall_the_Volhynia_Massacre_desc: "We have faced the Poles again and must once again fight back against them. It's time for our country to finally end the Polish Threat"
  UKR_polish_ukr_brotherhood: "Polish-Ukrainian Brotherhood"
  UKR_polish_ukr_brotherhood_desc: "Only together, Ukraine and Poland will be able to defeat any enemy"
  UKR_belarus_brothers: "The Belarusian Brothers"
