--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -2259,3 +2259,5 @@
  maximum_migration_rate_value: "Maximum §YMigration Rate§! Value"
  base_migration_rate_value: "Base §YNet Migration Rate§!"
  migration_rate_value_factor: "§YNet Migration Rate§! Value Factor"
+ popularity_attack_modifier: "£world_tension_wargoal_texticon §HPolitical Popularity Attack§! Modifier"
+ popularity_boost_modifier: "£return_on_investment_modifier_texticon §HPolitical Popularity Boost§! Modifier"
