--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -1074,7 +1074,7 @@
  CAN_infantry_weapons6:0 "C8A4"
  CAN_infantry_weapons_6_desc: "The C8A4 is based on the Colt MRR, including a suppressor, integrated top rail, newer optics, new trigger system, and several other improvements found on the previous C7 and C8 rifles.”
  CAN_infantry_weapons7:0 "CMAR"
- CAN_infantry_weapons_7_desc: "The Canadian Modular Assault Rifle is a further set of upgrades to the C8A4, focusing on varible optics, better ergonomics, and an improved ability to tailor the weapon to the operator."
+ CAN_infantry_weapons_7_desc: "The Canadian Modular Assault Rifle is a further set of upgrades to the C8A4, focusing on variable optics, better ergonomics, and an improved ability to tailor the weapon to the operator."
 
 
  CAN_APC_2:0 "LAV-I AVGP"
