--- a/localisation/english/MD_decisions_l_english.yml
+++ b/localisation/english/MD_decisions_l_english.yml
@@ -1069,7 +1069,7 @@
  bohgana_decision: "Create 2C-22 Bohdana Design"
 
  NATO_ukraine_help: "Equipment Help For Ukraine"
- NATO_ukraine_help_desc: "Since the start of the Russo-Ukranian war, Ukraine requests equipment. While usual mechanisms are not off the charts, special NATO channels can be used to transfer equipment and support to Ukraine."
+ NATO_ukraine_help_desc: "Since the start of the Russo-Ukrainian war, Ukraine requests equipment. While usual mechanisms are not off the charts, special NATO channels can be used to transfer equipment and support to Ukraine."
  send_money_to_ukraine: "Provide Monetary Help To Ukraine"
  send_light_equipment: "Send Light Equipment"
  send_medium_equipment: "Send Medium Equipment"
