--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -1126,7 +1126,7 @@
  CAN_IFV_3_desc:0 "The LAV III is the third generation of the Light Armoured Vehicle (LAV) family of armored personnel carriers built by General Dynamics Land Systems – Canada (GDLS-C), a London, Ontario, based subsidiary of General Dynamics. It first entered service in 1999, it is the primary mechanized infantry vehicle of both the Canadian Army and the New Zealand Army.
  CAN_IFV_3_short:0 "LAV-III Kodiak"
  CAN_IFV_4:0 "LAV-III LORIT"
- CAN_IFV_4_desc:0 "An upgraded version of the LAV III with newer turrets and electronics, increased IED protection, and addon armour conducted under the LAV Operational Requirement Inegration Task (LORIT)."
+ CAN_IFV_4_desc:0 "An upgraded version of the LAV III with newer turrets and electronics, increased IED protection, and addon armour conducted under the LAV Operational Requirement Integration Task (LORIT)."
  CAN_IFV_4_short:0 "LAV-III LORIT"
  CAN_IFV_5:0 "LAV-6 IFV"
  CAN_IFV_5_desc:0 "The final upgrade of the LAV III to LAV 6.0 standards. The upgrades increased protection including new turrets, better electronics, increased IED protection, and addon armour while utilizing a turret armed with a 25mm chain gun and coaxial GPMG similar to the original LAV III."
