--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -390,7 +390,7 @@
  UKR_east_dominant_desc: "The end of the Cold War brought an unprecedented degree of independence to Ukraine. Nevertheless, the legacy of suzerainty lingered, making the country's political scene more volatile. Russia continues to influence Ukraine from the east, while the European Union began to exert its power over the country from the west. Within Ukraine, competing for political factions emerged that loyal to one foreign patron or the other. \n\n§RChanges in domestic or foreign policy may disrupt the balance of power between pro-western and pro-eastern proponents!§! \n\n§C(Pro-eastern predominance)§! \nGovernment will focus on closer ties with Russia, (including CSTO and EACU integration) which will cause discontent of nationalistic forces. \n\n§C(Pro-western predominance)§! \nGovernment will focus on EU and NATO integration, which, in turn, will cause discontent among the opponents from the pro-Russian camp."
  UKR_political_support: "Political Support"
  UKR_political_support_desc: "Providing support to one of the parties will reduce our influence."
- UKR_neglect_of_state_interests: "Neglet of State Interests"
+ UKR_neglect_of_state_interests: "Neglect of State Interests"
  UKR_neglect_of_state_interests_desc: "Neglect of state interests, will not remain without public attention."
  UKR_eco_factories: "Pollution Control Program"
  UKR_eco_factories_desc: "To reduce the level of pollution, we had to introduce some standards to maintain the environment, which significantly reduced the production volumes in factories."
