Libya Bug fixes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,9 +15,14 @@ v1.10.3
 
  Bugfix:
   - Fixed a couple focuses for France where the Stage: focuses were going to the wrong continent
+  - African Investment Bank now gives +2% ROI instead of +200%
+  - You can now actually do the African Union focuses
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
+
+ Localisation
+  - Added a better tooltip for a trigger when Libya is not ruled by the Gaddafis
 
 
 v1.10.2
