--- a/Changelog.txt
+++ b/Changelog.txt
@@ -22,6 +22,7 @@ v1.10.3
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
 
  Localisation
+  - Major fixes and improvements to the Russian localization
   - Added a better tooltip for a trigger when Libya is not ruled by the Gaddafis
 
 
