--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -1303,7 +1303,7 @@
  c4istar: "C4ISTAR"
  c4istar_desc: "With the use of advanced AWACS aircraft, we can conduct intelligence gathering and command and control operations, all from a single aircraft."
  forward_air_controllers: "Forward Air Controllers"
- forward_air_controllers_desc: "Dedicated observers, both on the ground and in the air, will be trained to precicely guide in strike and CAS aircraft."
+ forward_air_controllers_desc: "Dedicated observers, both on the ground and in the air, will be trained to precisely guide in strike and CAS aircraft."
  aerial_gunship_support: "Aerial Gunship Support"
  aerial_gunship_support_desc: "When the skies are secured, aerial gunships, equipped with heavy weapons, will be able to strike ground targets at will."
  t21st_century_modernization: "21st Century Modernization"
