--- a/localisation/english/MD_internal_factions_l_english.yml
+++ b/localisation/english/MD_internal_factions_l_english.yml
@@ -292,7 +292,7 @@
  farmers: "The Farmers"
  farmers_desc: "In most developing countries, the farmers and their families are by far the largest group in the nation. Though holding no power individually, as a collective their needs and demands need to be considered carefully if stability is to be preserved."
  farmers_dynamic_modifier: "£pol_idea $farmers$"
- farmers_opinion_tt: "Opinion of §Y$farmers$§!: [FARM_opinion_display]\n\n§YEffects from opinion:§!\n$MODIFIER_CONSCRIPTION_FACTOR$: [?THIS.FARM_conscription_factor_var|+%]\n$MODIFIER_GLOBAL_MONTHLY_POPULATION$: [?THIS.FARM_monthly_pop_var|+%]\n$MODIFIER_CONSUMER_GOODS_FACTOR$: [?THIS.FARM_consumer_goods_factor_var|Y%]\n$agricolture_productivity_modifier$: [?THIS.FARM_productivity_modifier_var|+%]\n$agriculture_tax_modifier$: [?THIS.FARM_agriculture_income_modifier_var|+%]\n$agriculture_district_income_tax_modifier$: [?THIS.FARM_agriculture_income_modifier_var|+%]\n$modifier_production_speed_agriculture_district_factor$: [?THIS.FARM_production_speed_agricultural_district_factor_var|+%]\n"
+ farmers_opinion_tt: "Opinion of §Y$farmers$§!: [FARM_opinion_display]\n\n§YEffects from opinion:§!\n$MODIFIER_CONSCRIPTION_FACTOR$: [?THIS.FARM_conscription_factor_var|+%]\n$MODIFIER_GLOBAL_MONTHLY_POPULATION$: [?THIS.FARM_monthly_pop_var|+%]\n$MODIFIER_CONSUMER_GOODS_FACTOR$: [?THIS.FARM_consumer_goods_factor_var|Y%]\n$agricolture_productivity_modifier$: [?THIS.FARM_productivity_modifier_var|+%]\n$modifier_production_speed_agriculture_district_factor$: [?THIS.FARM_production_speed_agricultural_district_factor_var|+%]\n"
  positive_farm_tt: "§G[?THIS.farmers_opinion|0]§!"
  negative_farm_tt: "§R[?THIS.farmers_opinion|0]§!"
  neutral_farm_tt: "§Y[?THIS.farmers_opinion|0]§!"
