--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,6 +23,7 @@ v1.10.3
   - African Investment Bank now gives +2% ROI instead of +200%
   - You can now actually do the African Union focuses
   - Fixed the Agricultural Districts getting ridiculous production buffs on high productivity
+  - Fixed the incorrect party description for Venezuela Military Junta being South Ossetian for some reason
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
