Fixed the starting Mexican general election

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -25,6 +25,7 @@ v1.10.3
   - Fixed the Agricultural Districts getting ridiculous production buffs on high productivity
   - Fixed the incorrect party description for Venezuela Military Junta being South Ossetian for some reason
   - Fixed the Nigerian parties not properly showing their icon in coalitions
+  - Fixed the starting Mexican elections
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
