--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -4,6 +4,16 @@
  GER_agenda_2010_desc: "Gerhard Schröder was always a moderate among the social democrats and thus advocated restraint with the budget. The 'Agenda 2010' is an ambitious project of budget cuts and bureaucratic reforms that will without a doubt draw heavy criticism from leftist groups and push the government towards the center - but it could be fantastic for economic progress."
 
  #Burger_Need_Coffee
+ GER_strengthen_the_service_sector: "Strengthen the Service Sector"
+ GER_strengthen_the_service_sector_desc: "West Germany completed its transformation into a service economy in the aftermath of the 1950s economic miracle and the downturn of the coal and heavy industry of the Ruhr. Since then, the country is a familiar face to young innovators, with Berlin standing as one of the world capitals of Start Up businesses."
+ GER_industrial_outsourcing: "Industrial Outsourcing"
+ GER_industrial_outsourcing_desc: "The German industrial sector has been massively weakened by the growth of wages and the free movement of labor to less fortunate European markets like Hungary, Slovakia, Romania and Bulgaria. The German government needs to make sure that the movement of industrial concerns is controlled by government subsidies and EU incentives in order to not lose jobs to more hostile rivals like China."
+ GER_european_business_opportunities: "European Business Opportunities"
+ GER_european_business_opportunities_desc: "With the removal of trade barriers across the continent, everyone's economic profit grows - but Germany's most of all, and that's good. We must work further to remove tariffs and trade restrictions, and make it easier to open businesses and make trade."
+ GER_scientific_exchanges: "Scientific Exchanges"
+ GER_scientific_exchanges_desc: "With foreign experts flocking to Germany to live and work in tech and start-up hubs like Cologne and Berlin, Germany's innovativeness has improved. To former formalize these exchanges, German research teams must regularly meet up with foreign colleagues to study and compare results."
+ GER_international_business: "International Business"
+ GER_international_business_desc: "Germany often hails itself \"Exportweltmeister\", 'world champion of exports'. The German economy has traditionally seen significant trade surplusses, selling far more to other industrial nations than Germany itself purchases from them. A continuation of an export-friendly policy requires great amounts of foreign political pragmatism - the money of a dictator is just as good as the money of a popular leader, after all."
  GER_Form_Adam_Opel_AG: "Adam Opel AG"
  GER_Form_Adam_Opel_AG_desc: "Adam Opel AG is a German automobile manufacturer headquartered in Rüsselsheim, Germany. It was founded in August 1862 by Adam Opel"
  GER_Split_from_GM: "Split form GM"
@@ -1879,6 +1889,7 @@
  Germany.588.d: "The Heer has undergone several structural changes since its inception. The most recent restructuring was initiated with the new version of the Defense Policy Guidelines. The restructuring is said to be completed by 2010 and is referred to as “Heer 2010” or “New Army”. The Heer is divided into several categories, including Intervention Forces, Stabilization Forces, and Support Forces"
  Germany.588.a: "we should reduce our Army and save some money"
  Germany.588.b: "we need to specialize our forces but not reduce them"
+ Germany.588.c: "we need to Increase our Ability"
 
 # YEARLY EVENTS
  germany_yearly.1.t: "The Völkerstrafgesetzbuch"
@@ -2801,6 +2812,9 @@
  GER.Neues_Heer_II_status_progbar_tt: "§YStructure Neues Heer Progress§!: §G[?Neues_Heer_II_status]§!"
  GER_add_5_heer_reform_II: "Will increase §HStructure Neues Heer Reform§! by §H5%§!"
  GER_add_10_heer_reform_II: "Will increase §HStructure Neues Heer Reform§! by §H10%§!"
+ GER.Neues_Heer_III_status_progbar_tt: "§YStructure Neues Heer Progress§!: §G[?Neues_Heer_III_status]§!"
+ GER_add_5_heer_reform_III: "Will increase §HStructure Neues Heer Reform§! by §H5%§!"
+ GER_add_10_heer_reform_III: "Will increase §HStructure Neues Heer Reform§! by §H10%§!"
  GER_idea_east_german_debuff1: "East German Anger"
  GER_idea_east_german_debuff1_desc: "East Germans are quite pissed about their living conditions, and now they are acting against our interests..\n§W--------------§!\nThis National Spirit can be §RRemoved§! if we §GImprove§! East German opinion, or raise their standard of living."
  GER_unlock_Network_Infrastructure_decision_TT: "£decision_icon_small Will unlock '§HThe Digital Era§!' decisions"
