--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ v1.10.3
   - Made the AI for Africa more dynamic to ditch the CFA Franc
 
  Balance:
+  - INCREASED PRODUCTIVITY: NKO, CUB
   - Reduced the amount of income from Agricultural Districts
   - Increased the worker requirement from Agricultural Districts
   - Increased the building cost for network infrastructure
