Redundance tech remove and rename

--- a/localisation/english/MD_traits_l_english.yml
+++ b/localisation/english/MD_traits_l_english.yml
@@ -211,8 +211,7 @@
  CAT_small_plane_research: "Light Aircraft Research Speed"
  CAT_medium_plane_research: "Medium Aircraft Research Speed"
  CAT_large_plane_research: "Large Aircraft Research Speed"
- CAT_eng_mbt_research: "Engineer Tanks Research Speed"
- CAT_rec_tank_research: "Recon Tanks Research Speed"
+ CAT_rec_tank_research: "Light Tanks Research Speed"
  CAT_arty: "Towed Artillery Research Speed"
  CAT_sp_arty: "Self-Propelled Artillery Research Speed"
  CAT_sp_r_arty: "Self-Propelled Rocket Artillery Research Speed"
