--- a/localisation/english/MD_focus_ITA_l_english.yml
+++ b/localisation/english/MD_focus_ITA_l_english.yml
@@ -1899,8 +1899,8 @@
  ITA_specialize_freccia_spirit_loc_2: "§YArmored Personnel Carrier§! Production Cost: §R+15%§!\n§YArmored Personnel Carrier§! Breakthrough: §G+15%§!\n§YArmored Personnel Carrier§! Defense: §G+15%§!"
  ITA_specialize_dardo_spirit_loc_1: "§YInfantry Fighting Vehicle§! Production Cost: §G-15%§!\n§YInfantry Fighting Vehicle§! Reliability: §R-7.5%§!"
  ITA_specialize_dardo_spirit_loc_2: "§YInfantry Fighting Vehicle§! Production Cost: §R+15%§!\n§YInfantry Fighting Vehicle§! Breakthrough: §G+15%§!\n§YInfantry Fighting Vehicle§! Defense: §G+15%§!"
- ITA_specialize_centauro_spirit_loc_1: "§YRecon Tank§! Production Cost: §G-15%§!\n§YRecon Tank§! Reliability: §R-7.5%§!"
- ITA_specialize_centauro_spirit_loc_2: "§YRecon Tank§! Production Cost: §R+15%§!\n§YRecon Tank§! Hard Attack: §G+15%§!\n§YRecon Tank§! Piercing: §G+15%§!"
+ ITA_specialize_centauro_spirit_loc_1: "§YLight Tank§! Production Cost: §G-15%§!\n§YLight Tank§! Reliability: §R-7.5%§!"
+ ITA_specialize_centauro_spirit_loc_2: "§YLight Tank§! Production Cost: §R+15%§!\n§YLight Tank§! Hard Attack: §G+15%§!\n§YLight Tank§! Piercing: §G+15%§!"
  ITA_specialize_lince_spirit_loc_1: "§YUtility Vehicle§! Production Cost: §G-15%§!\n§YUtility Vehicle§! Reliability: §R-7.5%§!"
  ITA_specialize_lince_spirit_loc_2: "§YUtility Vehicle§! Production Cost: §R+15%§!\n§YUtility Vehicle§! Max Speed: §G+10%§!\n§YUtility Vehicle§! Defense: §G+20%§!"
  ITA_specialize_arx_spirit_loc_1: "§YSmall Arms§! Production Cost: §G-15%§!\n§YSmall Arms§! Reliability: §R-7.5%§!"
