ukr industry stuff

--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -2356,6 +2356,26 @@
  UKR_national_steel_companies_desc: "Ruthenian steel was once a formidable product meant for waging war. Now, we no longer fight with swords and shields. However, our tanks, guns, and our bullets need quality steel to remain competitive."
  UKR_tsnap: "TSNAP"
  UKR_tsnap_desc: "These are institutions where different groups of people can receive a wide range of administrative services in a comfortable environment. They are created by local councils and local state administrations and serve individuals and legal entities"
+ UKR_bronetank: "Kharkiv Armored Plant"
+ UKR_bronetank_desc: "The state enterprise of the armored industry, which carries out the production, repair, maintenance, re-equipment and modernization of armored vehicles"
+ UKR_avia_zavod: "Kharkiv Aviation Plant"
+ UKR_avia_zavod_desc: "The enterprise of aviation engineering in the city of Kharkov. It produces passenger, transport, and military aircraft"
+ UKR_priborostroy: "Kharkiv Instrument-Making Plant"
+ UKR_priborostroy_desc: "One of the largest factories in the USSR for the production of military electronics and household electrical equipment."
+ UKR_tractor: "Kharkiv Tractor Plant"
+ UKR_tractor_desc: "An enterprise for the production of tracked and wheeled tractors.."
+ UKR_agregat: "Kharkiv Aggregate Design Bureau"
+ UKR_agregat_desc: "A scientific and production enterprise of the military-industrial complex, which develops and manufactures units for hydraulic, fuel and electrical systems of aviation and rocket technology.."
+ UKR_morozova: "Kharkiv Engineering Design Bureau"
+ UKR_morozova_desc: "An enterprise developing armored vehicles. Previously, KP KKBM played a key role in the creation of armored tracked vehicles of the Soviet Union."
+ UKR_specmachine: "Kharkov Plant Of Special Machines"
+ UKR_specmachine_desc: "The state enterprise of the military-industrial complex."
+ UKR_malichev: "Malyshev Plant"
+ UKR_malichev_desc: "The plant of transport engineering in Kharkov, which produces engines, locomotives and tanks."
+ UKR_reborn_ser_and_molot: "Revive "Hammer and Sickle" Plant"
+ UKR_reborn_ser_and_molot_desc: "A large enterprise of agricultural machinery in Kharkov, it was one of the most important enterprises of the Kharkov industry and one of the largest enterprises of agricultural machinery in the Russian Empire and the USSR.."
+ UKR_concers: "Kharkiv Defense Concern"
+ UKR_concers_desc: "We will combine all our enterprises of the military industry into one concern. Thus, we will strengthen the coordination of production and increase productivity."
  UKR_naftogaz: "Naftogaz"
  UKR_naftogaz_desc: "Naftogaz is the state-owned oil and natural gas company. It is involved in the process of extraction to the refinement of the products. The company is often used to push for oil and gas independence against countries like Russia or other major energy exporters."
  UKR_extend_ukrainian_refineries: "Focus on Renewable Energy"
@@ -2384,6 +2404,7 @@
  UKR_pivdenmash_idea: "PA Pivdenmash"
  UKR_kyvarmor_idea: "Kiev Armored Plant"
  UKR_tsnap_idea: "TSNAP"
+ UKR_concern: "Kharkiv Military Industry"
  UKR_zaz_idea: "ZAZ"
  UKR_kraz_idea: "KrAZ"
  UKR_motorsich_idea: "Motor Sich"
