--- a/localisation/russian/MD_focus_CUB_l_russian.yml
+++ b/localisation/russian/MD_focus_CUB_l_russian.yml
@@ -686,7 +686,9 @@
  CUB_freedom_of_debate: "Свобода слова"
  CUB_freedom_of_debate_desc: "Свобода слова — лучше, чем её отсутствие."
  CUB_president: "Президент"
- CUB_president_desc: "Необходимо пересмотреть должность главы нашего государства, чтобы продемонстрировать стремление к переменам и сотрудничеству. "
+ CUB_president_desc: "Необходимо пересмотреть должность главы нашего государства, чтобы продемонстрировать стремление к переменам и сотрудничеству."
+ CUB_russian_bases: "Российские Базы на Кубе"
+ CUB_russian_bases_desc: "Поскольку США не хотят говорить с нами, они будут говорить с российскими вооруженными силами."
  CUB_new_leader: "Новый лидер кубинского народа"
  CUB_new_leader_desc: "У Фиделя Кастро появился достойный наследник! Мы уверенно движемся к светлому будущему для Кубы."
  CUB_continue_reformism: "Продолжение реформ"
