--- a/localisation/english/MD_focus_DPR_LPR_HPR_OPR_l_english.yml
+++ b/localisation/english/MD_focus_DPR_LPR_HPR_OPR_l_english.yml
@@ -118,7 +118,7 @@
  DPR_nov_annex_opr_desc: "We will expand Novorossiya by joining the new republic to it."
  DPR_nov_annex_hpr: "Annex The Kharkiv Republic to Novorossiya"
  DPR_nov_annex_hpr_desc: "We will expand Novorossiya by joining the new republic to it."
- DPR_territorial_defence: "Create A Ter.Defense"
+ DPR_territorial_defence: "Create A Territoria Defense"
  DPR_territorial_defence_desc: "In addition to the people's militia, we are borrowing the Ukrainian practice of creating Territorial Defense to strengthen our borders and internal security"
  DPR_nov_propaganda: "Promoting Unity"
  DPR_nov_propaganda_desc: ""
@@ -271,7 +271,7 @@
  OPR_passport_desc: "We will also create our own citizenship, people should understand that we live in our own state."
  OPR_operator: "Our Telecom Operator"
  OPR_operator_desc: "We will completely get rid of Ukrainian telecom operators and create our own."
- OPR_teroborona: "Create A Ter.Defense"
+ OPR_teroborona: "Create A Territoria Defense"
  OPR_teroborona_desc: "In addition to the people's militia, we are borrowing the Ukrainian practice of creating Territorial Defense to strengthen our borders and internal security."
  OPR_afini: "Odessa Squad"
  OPR_afini_desc: "Concerned citizens united in a squad to protect their city."
@@ -350,7 +350,7 @@
  HPR_passport_desc: "We will also create our own citizenship, people should understand that we live in our own state."
  HPR_operator: "Our Telecom Operator"
  HPR_operator_desc: "We will completely get rid of Ukrainian telecom operators and create our own."
- HPR_teroborona: "Create A Ter.Defense"
+ HPR_teroborona: "Create A Territoria Defense"
  HPR_teroborona_desc: "In addition to the people's militia, we are borrowing the Ukrainian practice of creating Territorial Defense to strengthen our borders and internal security."
  HPR_afini: "Battalion "Athens""
  HPR_afini_desc: "Many caring citizens who came to our republic have already been able to create their own battalion - Athens. While Sparta was in the DPR, we will have Athens."
@@ -480,7 +480,7 @@
  LPR_4thguard_desc: ""
  LPR_odessa: "Odessa Group"
  LPR_odessa_desc: ""
- LPR_territorial_defence: "Create A Ter.Defense"
+ LPR_territorial_defence: "Create A Territoria Defense"
  LPR_territorial_defence_desc: "In addition to the people's militia, we are borrowing the Ukrainian practice of creating Territorial Defense to strengthen our borders and internal security"
  LPR_create_nov: "Creation of Novorossiya"
  LPR_create_nov_desc: "We will announce the creation of a unified state entity - Novorossiya."
