--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -1286,6 +1286,13 @@
  ISR_israel_readys_union_state: "§YPercentage§! of §Y[ISR.GetNameWithFlag]§! readiness to integrate into the §YUnion State§!"
  ISR_israel_notreadys_union_state: "§RUNAVAILABLE§!"
 
+ #ISRAEL
+ unionstate_armenia_tooltip: "[armenia_readys_union_state]"
+ unionstate_armenia_output_text: "[armenia_ready_union_state]"
+ ARM_armenia_ready_union_state: "§Y[?ARM.union_state|-0]§!"
+ ARM_armenia_readys_union_state: "§YPercentage§! of §Y[ARM.GetNameWithFlag]§! readiness to integrate into the §YUnion State§!"
+ ARM_armenia_notreadys_union_state: "§RUNAVAILABLE§!"
+
 
  #UKRAINE
  unionstate_ukraine_tooltip: "[ukraine_readys_union_state]"
