--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -2610,6 +2610,6 @@
  BLR_Polonez: "Polonez"
  BLR_btr60: "BTR-60"
  BLR_btr70: "BTR-70"
- BLR_kobra_k: "Cobra K"
+ BLR_kobra_k: "Cobra-K"
  tracktors_TT: "New tractors will be produced"
  BLR_rus_licenze: "Rus licence"
