need a coding slave

--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -1890,6 +1890,45 @@
  Germany.588.a: "we should reduce our Army and save some money"
  Germany.588.b: "we need to specialize our forces but not reduce them"
  Germany.588.c: "we need to Increase our Ability"
+ Germany.589.t: "Heer 2010"
+ Germany.589.d: "with the end of this structure we came to the result, their is no need of strict structures anymore. we need a permanent transdormation in progress to adjust to the fast changing needs"
+ Germany.589.a: "flexibelity is a german virtue"
+ Germany.600.t: "Day of the Open Garrison"
+ Germany.600.d: "The 'Day of the Open Garrison' is an annual event hosted by the Bundeswehr, Germany's armed forces, aimed at fostering greater public understanding and transparency of military operations and life. This event invites citizens of all ages to visit military bases across the country, offering a rare glimpse into the daily routines, equipment, and training of German soldiers."
+ Germany.600.a: "their is no need to glorify militarism"
+ Germany.600.b: "lets show our people that we are able to protect them"
+ Germany.600.c: "lets make it a family friendly celebration, to keep soldiers families happy"
+ Germany.601.t: "Visit swearing-In ceremony"
+ Germany.601.d: "The swearing-in ceremony of the Bundeswehr, Germany's armed forces, is a solemn and significant event marking the formal induction of new recruits into military service. This ceremony underscores the commitment of these individuals to serve and defend their country, highlighting the values and responsibilities they are undertaking."
+ Germany.601.a: "what a waste of our young people"
+ Germany.601.b: "to see such a amount of young people that want to serve our country is a honnor to us."
+ Germany.601.c: "Use the moment and take a speach to these people and their familiy about our values."
+ Germany.602.t: "Honnor Veterans"
+ Germany.602.d: "Due to the numerous deployments of our soldiers abroad, the number of veterans has significantly increased. We should consider a way to show them that we appreciate their service."
+ Germany.602.a: "we need to introduce a Veteran Medal"
+ Germany.602.b: "we should give them a day to honor their Service"
+ Germany.602.c: "we should not glorify them, soldiers are only paid murderer"
+ Germany.603.t: "Question old traditions in the army"
+ Germany.603.d: "we need to request some traditions of our troops to make sure our army stays aligned with our democratic values but also fostering a sense of identity and continuity while remaining firmly grounded in the principles of Germany’s democratic state"
+ Germany.603.a: "we should prevent the uncritical glorification of past military."
+ Germany.603.b: "we need to remember our soldiers the values of courage, integrity, and responsibility"
+ Germany.603.c: "we need to give our army his own traditions, beside from the questionable past ones."
+ Germany.604.t: "Allegations of Extremists in the Bundeswehr"
+ Germany.604.d: "In recent years, the Bundeswehr, Germany's armed forces, has faced scrutiny and controversy due to allegations of extremist elements within its ranks. These allegations have raised significant concerns about the integrity, safety, and democratic values upheld by the military."
+ Germany.604.a: "we need to strengthen the MAD to prevent Extremists."
+ Germany.604.b: "we shouldnt harass our soldiers with this"
+ Germany.604.c: "we should launch some investigations."
+ Germany.605.t: "The Mental health of our Veterans"
+ Germany.605.d: "The mental health of our Veterans is a important task, because we recognice how the war change our fathers and grandfathers in WW2 or what happen to US veterans from Vietnam and so one."
+ Germany.605.a: "we should increase the budget for these topic and give our soldiers better excess to mental health programms."
+ Germany.605.b: "we should prepare our soldiers for the mental burden, that they will face on their missions."
+ Germany.605.c: "we dont need to take so much care for human ressources."
+ Germany.606.t: "Open Air Concert by the Heeresmusikkorps"
+ Germany.606.d: "The Heeresmusikkorps, or Army Music Corps, is a prominent part of the Bundeswehr (German Armed Forces) known for its musical excellence and ceremonial role. These military bands play a significant role in representing the Bundeswehr both nationally and internationally, providing musical support for military events, state ceremonies, and public performances."
+ Germany.606.a: "we should make them play a Concert for our people with free entrence."
+ Germany.606.b: "we should organise a Charity concert for our Veterans."
+ Germany.606.c: "we should organise a concert at a local festial."
+
 
 # YEARLY EVENTS
  germany_yearly.1.t: "The Völkerstrafgesetzbuch"
@@ -2815,14 +2854,17 @@
  GER.Neues_Heer_III_status_progbar_tt: "§YStructure Neues Heer Progress§!: §G[?Neues_Heer_III_status]§!"
  GER_add_5_heer_reform_III: "Will increase §HStructure Neues Heer Reform§! by §H5%§!"
  GER_add_10_heer_reform_III: "Will increase §HStructure Neues Heer Reform§! by §H10%§!"
+ GER_Decision_Bundeswehr_anger: "Bundeswehr mood"
+ GER_Decision_Bundeswehr_anger_desc: "The Bundeswehr is in a time of transition. The end of the Cold War, the NATO eastward expansion, and many other factors have made a large army unnecessary. It is now time to adapt the military to the new circumstances. However, we must consider that our generals will not agree if we reduce our troops too drastically. \n\n§YBundeswehr anger§!: [?ROOT.GER_Bundeswehr_anger]%\n§YPeace dividend§!: [?ROOT.GER_Peace_dividend]%"
+
  GER_idea_east_german_debuff1: "East German Anger"
  GER_idea_east_german_debuff1_desc: "East Germans are quite pissed about their living conditions, and now they are acting against our interests..\n§W--------------§!\nThis National Spirit can be §RRemoved§! if we §GImprove§! East German opinion, or raise their standard of living."
  GER_unlock_Network_Infrastructure_decision_TT: "£decision_icon_small Will unlock '§HThe Digital Era§!' decisions"
 
 #BOP#
- GER_power_balance: "Military Phobia"
- GER_default_left_side: "Militarism"
- GER_default_right_side: "Pacifism"
+ GER_power_balance: "Our Society"
+ GER_default_left_side: "Multiculturalism"
+ GER_default_right_side: "Leading Culture"
  GER_mid_range: "Balanced"
  GER_1_left_side_range: "Militaristic Ideals"
  GER_left_side_range: "Pushing for Militarism"
@@ -2895,3 +2937,20 @@ Drones: "Drones"
  GER_breach_of_contract_opinion_III: "Suspend Final Settlement Limits"
  GER_Contract_I_TT: "The die is cast, lets wait and see how our neighbors react."
  GER_Neighbor_Opinion_tt: "will decide how they continue their relationship to our nation"
+ GER_SAPOS_decision: "The SAPOS system"
+ GER_SAPOS_decision_desc: "The SAPOS system, or "Satellitenpositionierungsdienst der deutschen Landesvermessung" (Satellite Positioning Service of the German National Survey), is a sophisticated network designed to provide high-precision positioning services across Germany. It leverages a combination of global navigation satellite systems (GNSS), such as GPS and GLONASS, and ground-based reference stations to deliver real-time and post-processed positioning data with centimeter-level accuracy."
+ GER_lease_acces_china: "Lease acces to Beidou system"
+ GER_lease_acces_RUS: "Lease acces to GLONASS system"
+ GER_lease_acces_USA: "Lease acces to GPS system"
+ GER_Day_of_open_garnison: "Day of open Garisson"
+ GER_Visit_swearing_in_ceremony: "Visit swear in ceremony"
+ GER_honor_veterans: "Honor Veterans"
+ GER_Question_some_traditions: "Question old traditions"
+ GER_allegations_of_extremists: "Allegations of extremists"
+ GER_increase_mental_health_programms: "Increase mental health programm"
+ GER_launch_open_air_concert_of_heeresmusikkorps: "Open Air concert by Heeresmusikkorps"
+ GER_lease_acces_USA_TT: "§Ywe get acces to GPS System for 365 days§!"
+ GER_lease_acces_china_TT: "§Ywe get acces to Beidou System for 365 days§!"
+ GER_lease_acces_SOV_TT: "§Ywe get acces to GLONASS System for 365 days§!"
+ GER_modify_Peace_dividend_tt: "§YPeace dividend§! changes by [?modify_Peace_dividend|+0] (Current: §Y[?ROOT.GER_Peace_dividend]%§!)\n"
+ GER_modify_Bundeswehr_anger_tt: "§YBundeswehr anger§! changes by [?modify_Bundeswehr_anger|+0] (Current: §Y[?ROOT.GER_Bundeswehr_anger]%§!)\n"
