Redo political parties again

--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -6193,27 +6193,30 @@
  # Ireland
  IRE.conservatism: "£IRE_western_conservative Fianna Fail"
  IRE.conservatism_desc: ""
- IRE.socialism: "£IRE_western_social_democrat Labour Party"
- IRE.socialism_desc: ""
- IRE.Communist-State: "£IRE_emerging_communism Workers Party"
- IRE.Communist-State_desc: ""
- IRE.Neutral_green: "£IRE_neutral_green Green Party"
- IRE.Neutral_green_desc: ""
- IRE.Nat_Autocracy: "£IRE_ira_military_junta Forsai Cosanta"
- IRE.Nat_Autocracy_desc: ""
- IRE.Monarchist: "£ire_monarchist The MacCarthy Mor"
- IRE.Monarchist_desc: ""
- IRE.oligarchism: "£ire_monarchist Guiness"
- IRE.oligarchism_desc: ""
- IRE.Neutral_conservatism: "£IRE_neutral_conservatism Progressive Democrats"
- IRE.Neutral_conservatism_desc: ""
  IRE.liberalism: "£IRE_liberalism Fine Gael"
  IRE.liberalism_desc: ""
  IRE.neutral_Social: "£IRE_neutral_social Sinn Fein"
  IRE.neutral_Social_desc: ""
- IRE.anarchist_communism_1: "People before Profit"
- IRE.anarchist_communism_1_desc: ""
-
+ IRE.socialism: "£IRE_western_social_democrat Labour Party"
+ IRE.socialism_desc: ""
+ IRE.Communist-State: "£IRE_emerging_communism_2015 People before Profit"
+ IRE.Communist-State_desc: ""
+ IRE.Neutral_Communism: "Social Democrats"
+ IRE.Neutral_Communism_desc: ""
+ IRE.Neutral_green: "£IRE_neutral_green Green Party"
+ IRE.Neutral_green_desc: ""
+ IRE.Neutral_conservatism: "£IRE_neutral_conservatism Progressive Democrats"
+ IRE.Neutral_conservatism_desc: ""
+ IRE.Neutral_conservatism_2018: "£IRE_neutral_conservatism_2018 Aontú"
+ IRE.Neutral_conservatism_2018_desc: ""
+ IRE.Nat_Populism: " Rural Independents"
+ IRE.Nat_Populism_desc: "A cohort of right wing nationalists who remain unaligned"
+ IRE.Nat_Populism_unified: "£Nat_Populism_unified Independent Ireland"
+ IRE.Nat_Populism_unified_desc: ""
+ IRE.Nat_Autocracy: "£IRE_ira_military_junta Forsai Cosanta"
+ IRE.Nat_Autocracy_desc: ""
+ IRE.Monarchist: "£ire_monarchist The MacCarthy Mor"
+ IRE.Monarchist_desc: ""
 
  # Israel
  ISR.conservatism: "£ISR_conservatism Likud"
